--- a/index.html
+++ b/index.html
@@ -10,6 +10,97 @@
 
     <link rel="stylesheet" href="main.css">
 
+    <style>
+        body {
+            background-color: white;
+            font-family: geneva;
+            font-size: 100%;
+            align-items: center;
+            color: #4c4543;
+            text-align: center;
+
+        }
+
+
+        h3 {
+            background-color: black;
+            color: white;
+        }
+
+
+        .nav {
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            background-color: black;
+
+            height: 10vh;
+            width: 100%;
+            z-index: 3;
+
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+
+
+        }
+
+        .nav ul {
+            display: flex;
+            text-transform: uppercase;
+            list-style-type: none;
+        }
+
+        .nav ul li {
+            text-align: center;
+            margin-left: 30px;
+            padding: 10px 20px;
+            font-size: 0.9rem;
+        }
+
+        .nav img {
+            padding: none;
+            width: 80px;
+            height: 50px;
+
+        }
+
+        .nav a {
+            text-decoration: none;
+            color: white;
+        }
+
+        .nav a:hover {
+            text-decoration: none;
+            color: #b9adb2;
+        }
+
+        .nav a:active {
+            color: #E3E4E0;
+        }
+
+
+
+        button {
+            background-color: #87281b;
+            color: white;
+            width: 130px;
+            height: 50px;
+            text-transform: uppercase;
+            border-radius: 10px;
+        }
+
+        button:hover {
+            background-color: white;
+            color: #67727E;
+        }
+
+        .titulo {
+            margin-top: 100px;
+        }
+
+    </style>
+
 </head>
 
 <body>
@@ -30,74 +121,74 @@
 
     <div id="tapas">
         <h3> NUESTRAS TAPAS</h3>
-            <p>
-                Perrito Caliente <br>
-                Tostada de jamón <br>
-                Tostada de Ensaladilla rusa <br>
-                Salchipapas <br>
-                Tostada de Bacon y huevo <br>
-                Braviolis <br>
-                Tosta de paté <br>
-                Tosta de lacon <br>
-                Tostada de queso y mebrillo <br>
-                Sandwich mixto <br>
-                Hamburguesa<br>
-                Tostada de lomo y pimiento
-            </p>
+        <p>
+            Perrito Caliente <br>
+            Tostada de jamón <br>
+            Tostada de Ensaladilla rusa <br>
+            Salchipapas <br>
+            Tostada de Bacon y huevo <br>
+            Braviolis <br>
+            Tosta de paté <br>
+            Tosta de lacon <br>
+            Tostada de queso y mebrillo <br>
+            Sandwich mixto <br>
+            Hamburguesa<br>
+            Tostada de lomo y pimiento
+        </p>
 
     </div>
     <div id="platos">
 
         <h3> PLATOS COMBINADOS </h3>
-            <p>
-                Perrito Caliente <br>
-                Tostada de jamón <br>
-                Tostada de Ensaladilla rusa <br>
-                Salchipapas <br>
-                Tostada de Bacon y huevo <br>
-                Braviolis <br>
-                Tosta de paté <br>
-                Tosta de lacon <br>
-                Tostada de queso y mebrillo <br>
-                Sandwich mixto <br>
-                Hamburguesa<br>
-                Tostada de lomo y pimiento
-            </p>
+        <p>
+            Perrito Caliente <br>
+            Tostada de jamón <br>
+            Tostada de Ensaladilla rusa <br>
+            Salchipapas <br>
+            Tostada de Bacon y huevo <br>
+            Braviolis <br>
+            Tosta de paté <br>
+            Tosta de lacon <br>
+            Tostada de queso y mebrillo <br>
+            Sandwich mixto <br>
+            Hamburguesa<br>
+            Tostada de lomo y pimiento
+        </p>
     </div>
     <div id="bocadillos">
 
         <h3> BOCADILLOS </h3>
-            <p>
-                Perrito Caliente <br>
-                Tostada de jamón <br>
-                Tostada de Ensaladilla rusa <br>
-                Salchipapas <br>
-                Tostada de Bacon y huevo <br>
-                Braviolis <br>
-                Tosta de paté <br>
-                Tosta de lacon <br>
-                Tostada de queso y mebrillo <br>
-                Sandwich mixto <br>
-                Hamburguesa<br>
-                Tostada de lomo y pimiento
-            </p>
+        <p>
+            Perrito Caliente <br>
+            Tostada de jamón <br>
+            Tostada de Ensaladilla rusa <br>
+            Salchipapas <br>
+            Tostada de Bacon y huevo <br>
+            Braviolis <br>
+            Tosta de paté <br>
+            Tosta de lacon <br>
+            Tostada de queso y mebrillo <br>
+            Sandwich mixto <br>
+            Hamburguesa<br>
+            Tostada de lomo y pimiento
+        </p>
     </div>
     <div id="sandwiches">
         <h3> SANDWICHES Y HAMBURGUESAS </h3>
-            <p>
-                Perrito Caliente <br>
-                Tostada de jamón <br>
-                Tostada de Ensaladilla rusa <br>
-                Salchipapas <br>
-                Tostada de Bacon y huevo <br>
-                Braviolis <br>
-                Tosta de paté <br>
-                Tosta de lacon <br>
-                Tostada de queso y mebrillo <br>
-                Sandwich mixto <br>
-                Hamburguesa<br>
-                Tostada de lomo y pimiento
-            </p>
+        <p>
+            Perrito Caliente <br>
+            Tostada de jamón <br>
+            Tostada de Ensaladilla rusa <br>
+            Salchipapas <br>
+            Tostada de Bacon y huevo <br>
+            Braviolis <br>
+            Tosta de paté <br>
+            Tosta de lacon <br>
+            Tostada de queso y mebrillo <br>
+            Sandwich mixto <br>
+            Hamburguesa<br>
+            Tostada de lomo y pimiento
+        </p>
 
     </div>
 
@@ -105,20 +196,20 @@
 
     <div id="raciones">
         <h3> RACIONES </h3>
-            <p>
-                Perrito Caliente <br>
-                Tostada de jamón <br>
-                Tostada de Ensaladilla rusa <br>
-                Salchipapas <br>
-                Tostada de Bacon y huevo <br>
-                Braviolis <br>
-                Tosta de paté <br>
-                Tosta de lacon <br>
-                Tostada de queso y mebrillo <br>
-                Sandwich mixto <br>
-                Hamburguesa<br>
-                Tostada de lomo y pimiento
-            </p>
+        <p>
+            Perrito Caliente <br>
+            Tostada de jamón <br>
+            Tostada de Ensaladilla rusa <br>
+            Salchipapas <br>
+            Tostada de Bacon y huevo <br>
+            Braviolis <br>
+            Tosta de paté <br>
+            Tosta de lacon <br>
+            Tostada de queso y mebrillo <br>
+            Sandwich mixto <br>
+            Hamburguesa<br>
+            Tostada de lomo y pimiento
+        </p>
 
     </div>
 
